# revolver-plugin

./: .gitignore  HANDOFF.md  LICENSE  PRODUCT.md  README.md  plugin.yaml  pyproject.toml  revolver.example.yaml
.github/workflows/: ci.yml
revolver/: __init__.py  __main__.py  bullets.py  cli.py  cylinder.py
tests/: test_selftest.py
